apps/spring-on-k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-on-k8s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: spring-on-k8s
spec:
 rules:
  - host: springonk8s.corp.local
    http:
      paths:
      - backend:
          service:
            name: app
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: spring-on-k8s
spec:
  podSelector:
    matchLabels:
      role: app
  ingress:
  - ports:
    - port: 8080
